--- a/SookDevLog/.prettierrc
+++ b/SookDevLog/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "singleQuote": false,
+  "semi": true,
+  "useTabs": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 80
 }
