--- a/SookDevLog/package.json
+++ b/SookDevLog/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-typescript": "^4.13.0",
     "gatsby-source-filesystem": "^4.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "prop-types": "^15.8.1",
@@ -20,7 +21,12 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.6.2"
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.13.0",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4"
   },
   "keywords": [
     "gatsby"
