--- a/SookDevLog/package.json
+++ b/SookDevLog/package.json
@@ -5,13 +5,16 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/react-helmet": "^6.1.5",
     "gatsby": "^4.13.1",
+    "gatsby-plugin-canonical-urls": "^4.15.0",
     "gatsby-plugin-gatsby-cloud": "^4.13.0",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-sitemap": "^5.15.1",
     "gatsby-plugin-typescript": "^4.13.0",
     "gatsby-remark-copy-linked-files": "^5.13.0",
     "gatsby-remark-external-links": "^0.0.4",
