--- a/SookDevLog/package.json
+++ b/SookDevLog/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-sitemap": "^5.15.1",
     "gatsby-plugin-typescript": "^4.13.0",
