--- a/SookDevLog/package.json
+++ b/SookDevLog/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^4.13.0",
     "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
+    "moment": "^2.29.3",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
