--- a/.eslintrc
+++ b/.eslintrc
@@ -35,8 +35,8 @@
 				"extensions": [".js", ".jsx", ".ts", ".tsx"]
 			}
 		],
-		"react/jsx-indent": [2, "space"],
-		"react/jsx-indent-props": [2, "space"],
+		"react/jsx-indent": [2, "tab"],
+		"react/jsx-indent-props": [2, "tab"],
 		"@typescript-eslint/no-inferrable-types": "off",
 		"@typescript-eslint/interface-name-prefix": "off",
 		"@typescript-eslint/explicit-function-return-type": "off",
