--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.22.0",
     "gatsby-plugin-postcss": "^5.13.0",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.13",
