--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.4",
+    "react-typical": "^0.1.3",
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@types/react-typical": "^0.1.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.22.0",
     "gatsby-plugin-postcss": "^5.13.0",
